[gd_scene load_steps=3 format=3 uid="uid://cq5cy87nbcsva"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_8hml1"]
[ext_resource type="PackedScene" uid="uid://dnsnlumcy7yvd" path="res://UI/options_menu.tscn" id="2_d5466"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8hml1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -235.0
offset_right = 216.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 57.0
offset_right = 140.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 187.0
offset_right = 397.0
offset_bottom = 383.0

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Resume"

[node name="Margin" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Options"

[node name="Margin2" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="ExitToMainMenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Exit to Main Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("2_d5466")]
visible = false
layout_mode = 1
